social media icons

--- a/index.html
+++ b/index.html
@@ -132,8 +132,25 @@
             <p>Phone: +233 20 991 9060</p>
         </div>
     </section>
+    <!--Footer with Social Media Icons-->
+    <footer class="bg-dark text-white text-center py-3">
+        <div class ="container">
+            <p>Follow me on social media:</p>
+            <ul class="list-inline social-icons">
+                <li class="list-inline-item"><a href="https://x.com/NyamekyePresco1" class="text-white" target="_blank"
+                        aria-label="Follow me on X"><i class="fab fa-x-twitter fa-2x"></i></a></li>
+                <li class="list-inline-item"><a href="https://github.com/OforiPrescott/" class="text-white" target="_blank"
+                    aria-label="Follow me on Github"><i class="fab fa-github fa-2x"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.linkedin.com/in/prescott-nyamekye/" class="text-white" target="_blank"
+                    aria-label="Follow me on LinkedIn"><i class="fab fa-linkedin fa-2x"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.instagram.com/prescott_39/" class="text-white" target="_blank"
+                        aria-label="Follow me on Instagram"><i class="fab fa-instagram fa-2x"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.facebook.com/prescott.nyamekye" class="text-white" target="_blank"
+                        aria-label="Follow me on Facebook"><i class="fab fa-facebook fa-2x"></i></a></li>
+            </ul>
+        </div>
+    </footer>
 
-    
 
     
 </body>
