update html, started css

--- a/index.html
+++ b/index.html
@@ -147,9 +147,15 @@
                         aria-label="Follow me on Instagram"><i class="fab fa-instagram fa-2x"></i></a></li>
                 <li class="list-inline-item"><a href="https://www.facebook.com/prescott.nyamekye" class="text-white" target="_blank"
                         aria-label="Follow me on Facebook"><i class="fab fa-facebook fa-2x"></i></a></li>
+                 <li class="list-inline-item"><a href="https://www.youtube.com/@nyamekyeprescott9872" class="text-white" target="_blank"
+                        aria-label="Follow me on Youtube"><i class="fab fa-youtube fa-2x"></i></a></li>
+                <li class="list-inline-item"><a href="https://t.snapchat.com/iTnDMi6f" class="text-white" target="_blank"
+                        aria-label="Follow me on Snapchat"><i class="fab fa-snapchat fa-2x"></i></a></li>
             </ul>
+            <p class="mt-3">© 2025 PresHacks. All rights reserved.</p>
         </div>
     </footer>
+
 
 
     
