--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h2 class="text-center mb-4">About Me</h2>
             <div class="row align-items-center">
                 <div class="col-md-4 text-center">
-                    <img src="./assets/profile.jpg" alt="PresHacks Profile Picture"
+                    <img src="./assets/8L6A2146.jpg" alt="PresHacks Profile Picture"
                         class="img-fluid rounded-circle mb-3 profile-img">
                 </div>
                 <div class="col-md-8">
@@ -125,7 +125,7 @@
         </div>
     </section>
     <!--Contact Section -->
-    <section id="Contact" class="py-5 bg-light">
+    <section id="contact" class="py-5 bg-light">
         <div class="container text-center">
             <h2 class="mb-4">Contact Me</h2>
             <p>Email: <a href="mailto:preshacks@gmail.com">preshacks@gmail.com</a></p>
@@ -156,8 +156,8 @@
         </div>
     </footer>
 
-
-
+    <!--Bootstrap 5 JS CDN (for carousel functionality)-->
+    <script src ="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
 </body>
 
