--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                     <div class="card project-card h-100">
-                        <img src="./assets/hobby.jpg" class="card-img-top project-img" alt="Hobby Page">
+                        <img src="./assets/Hobby.jpg" class="card-img-top project-img" alt="Hobby Page">
                         <div class="card-body">
                             <h5 class="card-title"><strong>Hobby Page</strong></h5>
                             <p class="card-text"><em>A simple webpage showcasing my favorite hobby, built with HTML and
@@ -103,7 +103,7 @@
                 </div>
                 <div class="col">
                     <div class="card project-card h-100">
-                        <img src="./assets/skills.jpg" class="card-img-top project-img" alt="Skills Image">
+                        <img src="./assets/Skills.jpg" class="card-img-top project-img" alt="Skills Image">
                         <div class="card-body">
                             <h5 class="card-title"><strong>Skills Image</strong></h5>
                             <p class="card-text"><em>An image depicting my skills, created using HTML and styled with
